# EasyTFLite

./: .gitignore  CMakeLists.txt
cmake/modules/: FindGlog.cmake  FindTensorFlowLite.cmake
docs/: Doxyfile  introduction.md
examples/galaxyclassification/: GalaxyClassification.cpp
examples/objectdetection/: SSD_ObjectDetection.cpp
src/: EasyTFLite.cpp  EasyTFLite.h  SSD_EasyTFLite.cpp  SSD_EasyTFLite.h  TFLite.cpp  TFLite.h
tests/: CMakeLists.txt  TFLiteTest.cpp
tests/random-data/: data.txt
tests/test-models/: multi_input_single_output.tflite  single_input_multi_output.tflite  single_volume_input.tflite
